# corr

./: .gitignore  CMakeLists.txt  main.cc  ops_cis.cc  ops_cis.h  ops_io.cc  ops_io.h  ops_mat.cc  ops_mat.h  ops_rhf.cc  ops_rhf.h
IO/: ops_io.cc  ops_io.h
MATH/: ops_mat.cc  ops_mat.h
MOTRANS/: ops_cis.cc
POSTHF/: can_mp2.h  motrans.cc  motrans.h
SCF/: ops_rhf.cc  ops_rhf.h  scf.cc  scf.h
basissets/: 3-21g.g94  def2-qzvpp-ri.g94  def2-qzvpp.g94  def2-tzvp-ri.g94  def2-tzvp.g94
src/: CMakeLists.txt  main.cc
src/IO/: ops_io.cc  ops_io.h
src/MATH/: ops_mat.cc  ops_mat.h
src/POSTHF/: can_mp2.cc  can_mp2.h  ccsd.cc  ccsd.h  ccsd_intermediates.cc  ccsd_intermediates.h  ccsd_ri.cc  loc_mp2.cc  loc_mp2.h  motrans.cc  motrans.h  ri.cc  ri.h
src/POSTHF/ccsd_restr/: ccsd_intermediates_restr.cc  ccsd_intermediates_restr.h  ccsd_restr.cc
src/POSTHF/ccsd_so/: ccsd_intermediates.cc  ccsd_intermediates.h  ccsd_so.cc
src/SCF/: ops_rhf.cc  ops_rhf.h  scf.cc  scf.h
src/UTIL/: util.h
syshfwplug/: CMakeLists.txt  __init__.py  doc.rst  plugin.cc  plugin.files  pymodule.py
